--- a/AAA_HealthSystem.uplugin
+++ b/AAA_HealthSystem.uplugin
@@ -1,13 +1,13 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.1",
+	"VersionName": "1.2",
 	"FriendlyName": "AAA_HealthSystem",
 	"Description": "Game Ready Health System for Single and Multiplayer Games.",
 	"Category": "Health",
 	"CreatedBy": "iamsince1998(Deepak)",
 	"CreatedByURL": "https://www.youtube.com/@iamsince1998",
-	"DocsURL": "https://github.com/iamsince1998/AAA_HealthSystem?tab=readme-ov-file#aaa_healthsystem",
+	"DocsURL": "https://youtu.be/kp6ago0b3R4",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/0d95a1d2df0044f2aa97f53f4f2ef2d3",
 	"SupportURL": "https://discord.gg/trj6heMn",
 	"CanContainContent": true,
@@ -18,7 +18,7 @@
 		{
 			"Name": "AAA_HealthSystem",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
+			"LoadingPhase": "PreDefault",
 			"WhitelistPlatforms": [
 				"Win64",
 				"Mac",
